test/types/sync/vass/ref-sync-5-blank.chpl
// Passing a sync variable to a single blank-intent formal.

var SVAR: sync int;

MYPROC(SVAR);

proc MYPROC(FORMAL: single int) { }
